add sample get all user
